--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>decompilation-test/src</testSourceDirectory>
+        <!--<testSourceDirectory>decompilation-test/src</testSourceDirectory>-->
         <plugins>
             <!-- For getting Git revision information -->
             <plugin>
@@ -118,11 +118,11 @@
                     <compilerArgument>-Xlint:none</compilerArgument>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
